# cryptocurrencyeda

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
cryptocurrencyeda/: avg_daily_return.ipynb  avg_daily_return.py
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/CryptocurrencyEDA/: __init__.py  avg_daily_return.py  daily_growth_rate.py  plot_price.py  retrieve_data.py
src/cryptocurrencyeda/: daily_growth_rate.py  plot_price.py
tests/: test_CryptocurrencyEDA.py  test_avg_daily_return.py  test_daily_growth_rate.py  test_plot_price.py  test_retrieve_data.py
