[tool.poetry]
name = "cryptocurrencyeda"
version = "0.1.0"
description = "A package to analyze historical cryptocurrency prices and performance"
authors = ["Berkay Bulut"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
pandas = "^1.4.0"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
